--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 
 <body>
     <p>はじめまして、GitHubへ！</p>
-  <p>情報の更新ができていますか？</p>
+    <p>情報の更新ができていますか？</p>
     <p>宜しくお願いします。</p>
+    <p>GitHubとの連携ができました！</p>
 </body>
 
 </html>
