--- a/kadai13-2/index.html
+++ b/kadai13-2/index.html
@@ -6,11 +6,13 @@
     <title>Document</title>
 </head>
 <style>
+    a.q2:hover{
+        border-radius: 50px;
+    }
     body{
         background-color: #fff;
-        font-family: 'open Sans',sans-serif;
+        font-family: 'Open Sans',sans=sans-serif;
     }
-
     a{
         text-decoration: none;
         font-size: 16px;
@@ -22,17 +24,12 @@
         padding-right: 45px;
         box-sizing: border-box;
     }
-    a.ql{
-        background-color: #fff;
-        color: #ff9f25;
-        border: 2px solid #ff9f25;
-    }
-    a.ql:hover{
+    a.q2{
         background-color: #ff9f25;
         color: #fff;
     }
 </style>
 <body>
-   <a href="#" class="ql">Button</a> 
+    <a href="#" class="q2">Button</a>
 </body>
 </html>
